cdk.out/VpcStack.template.json
{
 "Resources": {
  "LogAggregationVPC9E92B596": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/LogAggregationVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/Resource"
   }
  },
  "LogAggregationVPCPublicSubnet1SubnetF520BB59": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/LogAggregationVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "LogAggregationVPC9E92B596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/PublicSubnet1/Subnet"
   }
  },
  "LogAggregationVPCPublicSubnet1RouteTableECC58CE5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/LogAggregationVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "LogAggregationVPC9E92B596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/PublicSubnet1/RouteTable"
   }
  },
  "LogAggregationVPCPublicSubnet1RouteTableAssociation02D0D250": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "LogAggregationVPCPublicSubnet1RouteTableECC58CE5"
    },
    "SubnetId": {
     "Ref": "LogAggregationVPCPublicSubnet1SubnetF520BB59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "LogAggregationVPCPublicSubnet1DefaultRoute7DAA3A8E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "LogAggregationVPCIGWFEF9C4AE"
    },
    "RouteTableId": {
     "Ref": "LogAggregationVPCPublicSubnet1RouteTableECC58CE5"
    }
   },
   "DependsOn": [
    "LogAggregationVPCVPCGWFEC87B95"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "LogAggregationVPCPublicSubnet2Subnet8AE07386": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/LogAggregationVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "LogAggregationVPC9E92B596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/PublicSubnet2/Subnet"
   }
  },
  "LogAggregationVPCPublicSubnet2RouteTable7AFB0E1C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/LogAggregationVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "LogAggregationVPC9E92B596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/PublicSubnet2/RouteTable"
   }
  },
  "LogAggregationVPCPublicSubnet2RouteTableAssociationD003DF2B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "LogAggregationVPCPublicSubnet2RouteTable7AFB0E1C"
    },
    "SubnetId": {
     "Ref": "LogAggregationVPCPublicSubnet2Subnet8AE07386"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "LogAggregationVPCPublicSubnet2DefaultRouteBCAB17F2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "LogAggregationVPCIGWFEF9C4AE"
    },
    "RouteTableId": {
     "Ref": "LogAggregationVPCPublicSubnet2RouteTable7AFB0E1C"
    }
   },
   "DependsOn": [
    "LogAggregationVPCVPCGWFEC87B95"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "LogAggregationVPCIGWFEF9C4AE": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/LogAggregationVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/IGW"
   }
  },
  "LogAggregationVPCVPCGWFEC87B95": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "LogAggregationVPCIGWFEF9C4AE"
    },
    "VpcId": {
     "Ref": "LogAggregationVPC9E92B596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/LogAggregationVPC/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/02NTQ+CMAyGfwv3MeUj8Uw4GG8EDFezlRqm0BnWhRDCfzcoEU99+qTv21hG6UkmgRpdCM0z7IyWc8UKnkKN7oYQy7l+gcjvVBe5KLzuDFReE/LqdiqtZ7wq3eHud5c5Z8EoNpZ+xytciHEg5LNiHNW0vdm2jFlB2yPxIkp01g/wCf1zbqkxa+0iiolbS4dERkcZpcHDGRMOntj0KMvvfAM6Rk6N7gAAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefLogAggregationVPCPublicSubnet1SubnetF520BB591969FEBE": {
   "Value": {
    "Ref": "LogAggregationVPCPublicSubnet1SubnetF520BB59"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefLogAggregationVPCPublicSubnet1SubnetF520BB591969FEBE"
   }
  },
  "ExportsOutputRefLogAggregationVPCPublicSubnet2Subnet8AE0738632A0CB88": {
   "Value": {
    "Ref": "LogAggregationVPCPublicSubnet2Subnet8AE07386"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefLogAggregationVPCPublicSubnet2Subnet8AE0738632A0CB88"
   }
  },
  "ExportsOutputRefLogAggregationVPC9E92B5966EB383FE": {
   "Value": {
    "Ref": "LogAggregationVPC9E92B596"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefLogAggregationVPC9E92B5966EB383FE"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
